# text-summarizer

./: LICENSE  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
src/textsummarizer/: __init__.py  cli.py  summarizer.py
tests/: test_summarizer.py
