[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "text-summarizer"
version = "0.1.0"
description = "Abstractive text summariser with chunking for long documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["nlp", "summarization", "transformers", "huggingface"]

[project.optional-dependencies]
ml = ["torch", "transformers"]
dev = ["pytest"]

[project.scripts]
text-summarize = "textsummarizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
